--- a/LaTeX/diodo.tex
+++ b/LaTeX/diodo.tex
@@ -190,8 +190,71 @@ resistenza.
 %         Calibrazione
 %================================
 \subsection{Calibrazione}
-I due convertitori ADC della MCU sono stati calibrati.
-% continua
+
+La calibrazione dei canali ADC0 e ADC1 è stata effettuata sulla base della lettura differenziale rispettivamente fra le boccole A10 e A11 e fra A12 e A13. E’ stata calibrata la lettura di ciascuna delle due coppie separatamente.
+
+La boccola volta alla lettura della tensione maggiore è stata collegata al centrale di un potenziometro, a sua volta collegato ad un generatore di potenziale con tensione in ingresso pari a 3.3. V. L’altra boccola è stata invece collegata a massa.
+
+Variando la resistenza e conseguentemente la differenza di potenziale in ingresso, è stato possibile calcolare la media, la deviazione standard campione e la deviazione standard dalla media  relative a ciascuna tensione per un gruppo di 10000 misure effettuate con Teensy. Il centrale del potenziometro e la massa sono state, inoltre, collegate ad un multimetro digitale, così da avere il rispettivo valore in volt per ciascuna tensione valutata in unità arbitrarie. Sono stati, quindi, associati degli errori a queste ultime misure  tenendo presente le specifiche del multimetro.
+
+Dopodichè le misure relative a ciascuna coppia di boccole sono state poste all’interno di un grafico con i dati raccolti da Teensy in ordinate e i valori misurati col multimetro in ascisse. Dunque è stato effettuato un fit lineare attraverso la legge:
+
+\begin{equation}
+y(x, m, q)  = m \cdot x + q
+\end{equation}
+
+ove a e b sono i parametri liberi. Come errori associati alle letture digitali sono state utilizzate le deviazioni standard dalla media. Il fit relativo ad ADC0 ha conseguito i seguenti risultati:
+
+\begin{align*}
+	m_0 &= 0.0007968 \pm  0.0000033   \; V/digit \\
+	q_0 &= - 0.00018 \pm 0.00034  \; V \\
+	Var(m_0)  &= 1.1 \cdot 10^{-11}  \; V^2 /digit^2 \\
+	Var(q_0) &=1.2 \cdot 10^{-7} \; V^2 \\
+	Cov(m_0, q_0) &= - 1.6 cdot 10^{-10} \; V^2  /digit \\
+	{\chi}^2/\text{ ndof} &= {145 }/{15}\\ 
+	\text{abs\_sigma} &= \rm False
+\end{align*}
+
+
+\begin{figure}[H]
+
+    \centering
+
+        \includegraphics[scale=0.75]{digitvsvolt_ADC0_1.png}
+
+\end{figure}
+
+
+Per ADC1 si ha invece:
+
+
+\begin{align*}
+	m_1 &= 0.0007954 \pm 0.0000026  \; V/digit \\
+	q_1 &= 0.00384  \pm 0.00026  \; V \\
+	Var(m_1) &= 7.0 \cdot 10^{-12}  \; V^2 /digit^2 \\
+	Var(q_1) &= 6.8 \cdot 10^{-8} \; V^2 \\
+	Cov(m_1, q_1) &= - 6.1 \cdot 10^{-11} \; V^2  /digit \\
+	{\chi}^2/\text{ ndof} &= {96}/{15}\\ 
+	\text{abs\_sigma} &= \rm False
+\end{align*}
+
+\begin{figure}[H]
+
+    \centering
+
+        \includegraphics[scale=0.75]{digitvsvolt_ADC1_1.png}
+
+\end{figure}
+
+
+I coefficienti così riscontrati ci permetteranno di fornire una buona stima dei valori centrali relativi alla misura in volt delle letture analogiche (digit). Il $\chi^2$ risulta essere sovrastimato in quanto il MCU non ci fornisce una risposta perfettamente lineare ai segnali in ingresso. Dalle specifiche di Teensy 3.2, sappiamo che lo scostamento dall’andamento lineare può essere quantificato col 7 $\%$ della lettura in digit. Quindi per stimare gli errori relativi ad una data tensione V, si è usata la legge:
+
+\begin{equation}
+{dV}_{\text{value}} =  \sqrt{{Var(m_i)} \cdot {value^2} + {Var(q_i)} + 2 \cdot {Cov(m_i, q_i)} \cdot {value} +({\frac{7}{100}} \cdot (m_i \cdot {value} + q_i))^2}
+\end{equation}
+
+ove value è il valore in digit ed i può essere 0 o 1 a seconda di quale canale si sta considerando. Tale scrittura tiene conto di tale scostamento, degli errori e della covarianza dei parametri stimati dal fit. 
+
 
 %================================
 %       Acquisizione dati
