--- a/LaTeX/diodo.tex
+++ b/LaTeX/diodo.tex
@@ -272,32 +272,29 @@ trattazione approfondita del modello di fit, si rimanda all' \nameref{app: B}.
 
 I dati raccolti con sovrapposta la funzione di fit sono stati posti all'interno 
 del grafico \ref{fig: sck_lin}.
-\begin{figure}[!htb]
-	\centering 
-% 		\includegraphics[scale=1.3]{./gestione.pdf}
-	\caption{La curva caratteristica del diodo ricostruita dai nostri
-	dati, con sovrapposto il modello di best-fit \label{fig: sck_lin}}
-\end{figure}
 I parametri stimati dal fit risultano essere:
 \begin{align*}
-	R_{diodo} &= 47.5 \pm 0.2 \; \rm m\Omega \\
-	\eta V_T &= 46.40 \pm 0.06 \; \rm mV \\
-	I_0 &= (3.18 \pm 0.05) \; \rm nA \\
-	\sigma_{R, \eta V_T} &= ? \\   
-	\sigma_{R, I_0} &= ? \\
-	\sigma_{I_0, \eta V_T} &= ? \\
-	\chi^2/\text{ndof} &= 4483/2760 \\
+	R_{diodo} &= 47.549 \pm 0.018 \; \rm m\Omega \\
+	\eta V_T &= 46.3879 \pm 0.0065 \; \rm mV \\
+	I_0 &= (3.1024 \pm 0.0055) \cdot 10^{-12} \; \rm nA \\
+	offset &=\; - 0.9146\pm 0.0031\rm A\\
+	\chi^2/\text{ndof} &= 541310/276906 \\
 	\text{abs\_sigma} &= \rm False
 \end{align*}
-Il $\chi^2$ risulta essere pari a 4483 contro un aspettato di 2760.
-%(i dati vanno cambiati con quelli del fit fatto bene)
+
+\begin{figure}[H]
+	\centering 
+ 		\includegraphics[scale=0.6]{./Figure_4_1_Nskip_100.png}
+	\caption{Dati acquisiti e funzione di best fit \eqref{eq: model}. E' stato rappresentato un punto ogni 100 per comodità di visualizzazione.}
+\end{figure}
+
 Successivamente, i dati e la funzione sono stati posti all'interno di un
 grafico in scala semilogaritmica (grafico \ref{fig: sck_lin}).
-\begin{figure}[!htb]
+
+\begin{figure}[H]
 	\centering 
-% 		\includegraphics[scale=1.3]{./gestione.pdf}
-	\caption{La stessa curva $V-I$ del diodo in scala semilogaritmica,
-	con sovrapposto il modello di best-fit \label{fig: sck_log}}
+ 		\includegraphics[scale=0.6]{./Figure_3_1_Nskip_10.png}
+	\caption{Dati acquisiti e funzione di best fit \eqref{eq: model} in scala semilogaritmica. E' stato rappresentato un punto ogni 10 per comodità di visualizzazione.}
 \end{figure}
 
 %================================================================
