--- a/LaTeX/refs.bib
+++ b/LaTeX/refs.bib
@@ -37,3 +37,11 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2019arXiv190710121V},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+
+@MASTERSTHESIS{tesi,
+  AUTHOR =       {Chiara Manzoli},
+  TITLE =        {Il metodo di Newton e le sue varianti per sistemi di equazioni non lineari},
+  SCHOOL =       {Università di Bologna, corso di Laurea in Matematica},
+  YEAR =         {2015},
+}
